--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+google-sheets4 = "*"
+serde = "1"
+serde_json = "1"
+tokio = { version = "1.0", features = ["full"] }
+
