--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ google-sheets4 = "*"
 serde = "1"
 serde_json = "1"
 tokio = { version = "1.0", features = ["full"] }
-
+clap = { version = "3.0", features = ["derive"] }
+anyhow = "1.0"
